# RapMap

./: .drone.yml  .drone.yml.sig  CMakeLists.txt  README.md
.drone/: build.sh
TestingScripts/python/: ComputeSyntheticStats.py
cmake/: TestQuasiMap.cmake  TestQuasiMapPerfectHash.cmake
cmake/Modules/: FindCereal.cmake  FindJellyfish.cmake  FindSSE.cmake
include/: BooMap.hpp  BooPHF.hpp  Const.hpp  EditDistance.hpp  EnumCoder.hpp  FrugalBooMap.hpp  HitManager.hpp  HitManagerSA.hpp  IndexHeader.hpp  JFRaw.hpp  Kmer.hpp  MPHMap.hpp  PairAlignmentFormatter.hpp  PairSequenceParser.hpp  RSDic.hpp  RSDicBuilder.hpp  RapMapAligner.hpp  RapMapConfig.hpp  RapMapFileSystem.hpp  RapMapIndex.hpp  RapMapSAIndex.hpp  RapMapUtils.hpp  SACollector.hpp  SACollectorPair.hpp  SASearcher.hpp  ScopedTimer.hpp  SegmentMappingInfo.hpp  SelectiveAlignment.hpp  SelectiveAlignmentUtils.hpp  SingleAlignmentFormatter.hpp  SparseHashSerializer.hpp  SpinLock.hpp  Type.hpp  Util.hpp  edlib.h  rank9b.h  sparsepp.h  stringpiece.h
include/SIMDCompressionAndIntersection/: intersection.h
include/digestpp/detail/: functions.hpp
include/emphf/: bitpair_vector.hpp  bitstream.hpp  common.hpp  compute_mphf_generic.hpp  emphf_config.hpp  hypergraph_sorter_scan.hpp  hypergraph_sorter_seq.hpp  internal_memory_model.hpp  mmap_memory_model.hpp  mphf.hpp  mphf_hem.hpp  packed_edge_list.hpp  packed_vector.hpp  perfutils.hpp  ranked_bitpair_vector.hpp  test_mphf_generic.hpp
scripts/: Dockerfile  RunRapMap.sh  add-header.sh  bump_version.sh  compile.sh  make-release.sh
src/: CMakeLists.txt  EMPHFCommon.cpp  EditDistance.cpp  EnumCoder.cpp  EnumCoderTest.cpp  FastxParser.cpp  HitManager.cpp  HitManagerSA.cpp  RSDic.cpp  RSDicBuilder.cpp  RSDicBuilderTest.cpp  RSDicTest.cpp  RapMap.cpp  RapMapAligner.cpp  RapMapFileSystem.cpp  RapMapIndex.cpp  RapMapIndexer.cpp  RapMapMapper.cpp  RapMapSAIndex.cpp  RapMapSAIndexer.cpp  RapMapSAMapper.cpp  RapMapUtils.cpp  SAQuery.cpp  SegmentMappingInfo.cpp  UtilTest.cpp  bit_array.c  intersection.cpp  rank9b.cpp  stringpiece.cc
src/ksw2pp/: KSW2Aligner.cpp
